--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ button {
 
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
-     color: #fec955;
+     color: #AAAEBD;
      text-decoration: underline !important;
 }
 
@@ -277,7 +277,7 @@ button {
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-     color: #fec955;
+     color: #AAAEBD;
      text-decoration: underline !important;
 }
 
@@ -930,7 +930,7 @@ ul.social_icon li a {
 
 ul.social_icon li a:hover {
      background-color: #fff;
-     color: #fec955;
+     color: #AAAEBD;
 }
 
 .footer h3 {
