--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,34 @@
+:root {
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #04274b;
+    --secondary: #131313;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #f8f9fa;
+    --dark: #343a40;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-sans-serif: "Raleway", sans-serif;
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 #fa-mobile-center {
     text-align: center;
     margin: 0 auto;
@@ -9,4 +40,26 @@ small,
 .small {
     font-size: 90% !important;
     font-weight: 500;
+}
+
+.btn-back-to-top {
+    color: var(--yellow);
+    background-color: var(--primary);
+    ;
+    border-color: var(--primary);
+    ;
+}
+
+.btn-back-to-top:hover {
+    color: #212529;
+    background-color: #fd9a2d;
+    border-color: #fc9421;
+}
+
+.btn-back-to-top:focus,
+.btn-back-to-top.focus {
+    color: #212529;
+    background-color: #fd9a2d;
+    border-color: #fc9421;
+    box-shadow: 0 0 0 0.2rem rgba(220, 152, 77, 0.5);
 }
