--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -11,6 +11,7 @@
     --cyan: #17a2b8;
     --white: #fff;
     --gray: #6c757d;
+    --accodion-primay: #6c757d;
     --gray-dark: #343a40;
     --primary: #04274b;
     --primary-highlight: #fd7e14;
@@ -137,4 +138,44 @@ Ayuda a que las imagenes de los colaboradores en modo responsive no se sobrepong
 
 .hr-separate {
     width: 80%;
+}
+
+.simple-text-color-white {
+    color: #ffffff;
+}
+
+
+/*
+acodiones 
+
+*/
+
+.accordion-button:not(.collapsed) {
+    color: var(--white);
+    background-color: var(--accodion-primay);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .125);
+}
+
+.accordion-button:focus {
+    z-index: 3;
+    border-color: var(--accodion-primay);
+    outline: 0;
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .125);
+}
+
+.accordion-button::after {
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    content: "";
+    background-image: url(../img/recursos/chevron-down-solid.svg);
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform .2s ease-in-out;
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url(../img/recursos/chevron-down-solid.svg);
+    transform: rotate(-180deg);
 }
