--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -179,3 +179,24 @@ acodiones
     background-image: url(../img/recursos/chevron-down-solid.svg);
     transform: rotate(-180deg);
 }
+
+.float-whatsapp {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 87px;
+    right: 24px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+.float-whatsapp:hover {
+    text-decoration: none;
+    color: #25d366;
+    background-color: #fff;
+}
