--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="carousel-item d-none">
                 <img class="img-fluid"
-                    src="../../../assets/img/programer-sitting-at-desk-with-multiple-screens-running-code-talking-with-colleague-about-artificial-intelligence-algorithm-software-developers-doing-innovative-artificial-intelligence-project.jpg"
+                    src="assets/img/programer-sitting-at-desk-with-multiple-screens-running-code-talking-with-colleague-about-artificial-intelligence-algorithm-software-developers-doing-innovative-artificial-intelligence-project.jpg"
                     alt="Image" />
                 <div class="carousel-caption d-flex align-items-center justify-content-center">
                     <div class="p-5" style="width: 100%; max-width: 900px">
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="carousel-item d-none">
-                <img class="img-fluid" src="../../../assets/img/Software-Developer-Web-Developer-Programmer-6521720.jpg" alt="Image" />
+                <img class="img-fluid" src="assets/img/Software-Developer-Web-Developer-Programmer-6521720.jpg" alt="Image" />
                 <div class="carousel-caption d-flex align-items-center justify-content-center">
                     <div class="p-5" style="width: 100%; max-width: 900px">
                         <h5 class="d-none text-white text-uppercase mb-md-3">
@@ -68,7 +68,7 @@
     <div class="container">
         <div class="row align-items-center pb-1">
             <div class="col-lg-5">
-                <img class="img-thumbnail p-3" src="../../../assets/img/about.jpg" alt="" />
+                <img class="img-thumbnail p-3" src="assets/img/about.jpg" alt="" />
             </div>
             <div class="col-lg-7 mt-5 mt-lg-0">
                 <small class="bg-primary text-white text-uppercase font-weight-bold px-1">¿Quiénes somos?</small>
@@ -417,7 +417,7 @@
                 <div class="owl-carousel team-carousel">
                     <div class="team-item">
                         <div class="position-relative">
-                            <img class="img-fluid w-100" src="../../../assets/img/andres2.jpg" alt="" />
+                            <img class="img-fluid w-100" src="assets/img/andres2.jpg" alt="" />
                             <div
                                 class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                 <div class="d-flex align-items-center justify-content-start">
@@ -440,7 +440,7 @@
                     </div>
                     <div class="team-item">
                         <div class="position-relative">
-                            <img class="img-fluid w-100" src="../../../assets/img/SquarePic_20230315_16243259.jpg" alt="" />
+                            <img class="img-fluid w-100" src="assets/img/SquarePic_20230315_16243259.jpg" alt="" />
                             <div
                                 class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                 <div class="d-flex align-items-center justify-content-start">
@@ -595,7 +595,7 @@
                             lorem. Dolores tempor voluptua ipsum sanctus clita
                         </div>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="../../../assets/img/testimonial-1.jpg"
+                            <img class="img-fluid rounded-circle" src="assets/img/testimonial-1.jpg"
                                 style="width: 80px; height: 80px" alt="Image" />
                             <div class="pl-4">
                                 <h6 class="font-weight-bold">Client Name</h6>
@@ -609,7 +609,7 @@
                             lorem. Dolores tempor voluptua ipsum sanctus clita
                         </div>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="../../../assets/img/testimonial-2.jpg"
+                            <img class="img-fluid rounded-circle" src="assets/img/testimonial-2.jpg"
                                 style="width: 80px; height: 80px" alt="Image" />
                             <div class="pl-4">
                                 <h6 class="font-weight-bold">Client Name</h6>
@@ -623,7 +623,7 @@
                             lorem. Dolores tempor voluptua ipsum sanctus clita
                         </div>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="../../../assets/img/testimonial-3.jpg"
+                            <img class="img-fluid rounded-circle" src="assets/img/testimonial-3.jpg"
                                 style="width: 80px; height: 80px" alt="Image" />
                             <div class="pl-4">
                                 <h6 class="font-weight-bold">Client Name</h6>
@@ -637,7 +637,7 @@
                             lorem. Dolores tempor voluptua ipsum sanctus clita
                         </div>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="../../../assets/img/testimonial-4.jpg"
+                            <img class="img-fluid rounded-circle" src="assets/img/testimonial-4.jpg"
                                 style="width: 80px; height: 80px" alt="Image" />
                             <div class="pl-4">
                                 <h6 class="font-weight-bold">Client Name</h6>
@@ -651,7 +651,7 @@
                             lorem. Dolores tempor voluptua ipsum sanctus clita
                         </div>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="../../../assets/img/testimonial-5.jpg"
+                            <img class="img-fluid rounded-circle" src="assets/img/testimonial-5.jpg"
                                 style="width: 80px; height: 80px" alt="Image" />
                             <div class="pl-4">
                                 <h6 class="font-weight-bold">Client Name</h6>
@@ -676,7 +676,7 @@
         <div class="row">
             <div class="col-md-6 mb-5">
                 <div class="position-relative">
-                    <img class="img-fluid w-100" src="../../../assets/img/blog-1.jpg" alt="" />
+                    <img class="img-fluid w-100" src="assets/img/blog-1.jpg" alt="" />
                     <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                         style="width: 80px; height: 80px; bottom: 0; left: 0">
                         <h6 class="text-uppercase mt-2 mb-n2">Jan</h6>
@@ -686,7 +686,7 @@
                 <div class="border border-top-0" style="padding: 30px">
                     <div class="d-flex mb-3">
                         <div class="d-flex align-items-center">
-                            <img class="rounded-circle" style="width: 40px; height: 40px" src="../../../assets/img/user.jpg"
+                            <img class="rounded-circle" style="width: 40px; height: 40px" src="assets/img/user.jpg"
                                 alt="" />
                             <a class="text-muted ml-2" href="">John Doe</a>
                         </div>
@@ -702,7 +702,7 @@
             </div>
             <div class="col-md-6 mb-5">
                 <div class="position-relative">
-                    <img class="img-fluid w-100" src="../../../assets/img/blog-2.jpg" alt="" />
+                    <img class="img-fluid w-100" src="assets/img/blog-2.jpg" alt="" />
                     <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                         style="width: 80px; height: 80px; bottom: 0; left: 0">
                         <h6 class="text-uppercase mt-2 mb-n2">Jan</h6>
@@ -712,7 +712,7 @@
                 <div class="border border-top-0" style="padding: 30px">
                     <div class="d-flex mb-3">
                         <div class="d-flex align-items-center">
-                            <img class="rounded-circle" style="width: 40px; height: 40px" src="../../../assets/img/user.jpg"
+                            <img class="rounded-circle" style="width: 40px; height: 40px" src="assets/img/user.jpg"
                                 alt="" />
                             <a class="text-muted ml-2" href="">John Doe</a>
                         </div>
