--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,1 +1,230 @@
-<p>productos works!</p>
+<!-- Carousel Start -->
+<div class="container-fluid p-0 mb-5">
+    <div id="header-carousel" class="carousel slide carousel-fade">
+        <ol class="carousel-indicators d-none">
+            <li data-target="#header-carousel  d-none " data-slide-to="0" class="active"></li>
+            <li data-target="#header-carousel  d-none " data-slide-to="1"></li>
+            <li data-target="#header-carousel  d-none " data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="img-fluid" src="assets/img/producto1.jpg" alt="Image" />
+                <div class="carousel-caption d-flex align-items-center justify-content-center">
+                    <div class="p-5" style="width: 100%; max-width: 900px">
+                        <h5 class="d-none text-white text-uppercase mb-md-3">
+                            Creative Agency
+                        </h5>
+                        <h1 class="display-3 text-white mb-md-4">
+                            Sitios web básicos, con todo lo necesitas para impulsar tu negocio
+                        </h1>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+<!-- Carousel End -->
+
+<div id="pointbasicweb"></div>
+<!-- Detail Start -->
+<div class="container py-5">
+    <div class="row">
+        <!-- Blog Detail Start -->
+        <div class="col-lg-8">
+            <div class="position-relative">
+                <img class="img-fluid w-100" src="assets/img/blog-1.jpg" alt="">
+
+            </div>
+            <div class="pt-4 pb-2">
+
+                <h2 class="font-weight-bold">Sitios web básicos que te permiten llegar al mundo</h2>
+            </div>
+
+            <div class="mb-5">
+
+                <p>Un sitio web es esencial para que las empresas se expandan a nuevos mercados. Si bien algunas
+                    ideas requieren de grandes sitios web con manejo de altos flujos de visitas y transacciones, en
+                    Nogo Digital sabemos que no todas las ideas inician o necesitan lo mismo. Es por esto que
+                    ofrecemos la creación de sitios web básicos, que permiten a las empresas dar a conocer sus
+                    ideas, productos e información relevante a través de la internet.
+
+                </p>
+                <p>
+                    Una web básica, te permite tener contenido estático, que no requiere actualizaciones constantes.
+                    Es una opción económica para aquellos que buscan una presencia en línea sin realizar grandes
+                    inversiones y su objetivo principal es darse a conocer de forma rápida.
+
+                </p>
+                <h2 class="mb-4">Conoce más sobre las herramientas</h2>
+                <img class="img-fluid w-50 float-left mr-4 mb-3" src="assets/img/blog-1.jpg" alt="Image">
+                <p>Para tener un sitio web en internet, se requiere un conjunto de habilidades y tecnologías que
+                    permitan hacerlo accesible desde la web. Esto incluye servicios y herramientas como los DNS,
+                    nombres de dominio, un servidor web entre otros.
+                </p>
+                <p></p>
+                <h4 class="mb-4 text-break">¿Qué es un nombre de dominio? </h4>
+                <p>Es la forma en que tu sitio web será conocido en Internet. Cada sitio web tiene una dirección IP,
+                    que es un número que lo identifica. Por ejemplo, una dirección IP podría lucir como
+                    192.185.082.250. Sin embargo, esta forma de identificación es difícil de recordar para tus
+                    visitantes potenciales. Es por eso que el nombre de dominio le da un alias a la dirección IP de
+                    tu sitio, lo que permite que tus posibles clientes te busquen con el nombre de tu empresa. Por
+                    ejemplo, www.tuempresa.co es un nombre de dominio fácil de recordar que te permite tener
+                    presencia en línea y conectarte con tus clientes de manera efectiva.
+                </p>
+                <h4>
+                    ¿Qué es un DNS?
+
+                </h4>
+                <p>Una vez que tienes tu nombre de dominio, es importante que la red de internet pueda encontrar tu
+                    sitio web. Es aquí donde entran en juego los Servidores de Nombres de Dominio (DNS), los cuales
+                    funcionan como un mapa que indica la ubicación de tu sitio web, permitiendo que sea accesible
+                    para los usuarios de internet en todo el mundo.
+                </p>
+                <h4>¿Qué es un servidor web?
+                </h4>
+                <p>Un servidor web es el lugar en donde se almacena toda la información que deseas mostrar en
+                    internet. Es el espacio donde estarán disponibles tus productos, imágenes, reseñas, artículos,
+                    comentarios y todo lo que quieras mostrarle al mundo por medio de tu sitio web.
+                </p>
+                <h3 class="mb-4">Nuestra propuesta</h3>
+                <img class="img-fluid w-50 float-right ml-4 mb-3" src="assets/img/blog-2.jpg" alt="Image">
+                <p>En Noho Digital, entendemos que el costo puede ser un factor importante a la hora de crear un
+                    sitio web. Por eso, ofrecemos sitios web básicos que utilizan herramientas de bajo costo que
+                    permitan minimizar los gastos de mantenimiento. Trabajamos contigo para crear un sitio web
+                    funcional que se adapte a las necesidades de tu empresa o idea de negocio. Además, nuestros
+                    precios son muy accesibles, comenzando desde los $800.000 (COP)
+
+                </p>
+            </div>
+
+
+
+            <!-- Comment Form Start -->
+            <div class="border p-5">
+                <h3 class="font-weight-bold mb-4">Dejanos un comentario</h3>
+                <form>
+                    <div class="form-group">
+                        <label for="name">Nombre *</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email *</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="message">Mensaje *</label>
+                        <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
+                    </div>
+                    <div class="form-group mb-0">
+                        <input type="submit" value="Enviar Comentario"
+                            class="btn btn-primary font-weight-semi-bold py-2 px-3 text-white">
+                    </div>
+                </form>
+            </div>
+            <!-- Comment Form End -->
+        </div>
+        <!-- Blog Detail End -->
+
+        <!-- Sidebar Start -->
+        <div class="col-lg-4 mt-5 mt-lg-0">
+
+
+            <!-- Category Start -->
+            <div class="mb-5">
+                <h3 class="font-weight-bold mb-4">Categorias</h3>
+
+                <!-- acordeano boostrap -->
+                <div class="accordion " id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed font-weight-semi-bold bg-accordion-primary"
+                                type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                aria-expanded="false" aria-controls="collapseOne">
+                                <i class="fa fa-angle-right mr-2"></i> Sitios Web
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Un sitio web te permite llegar a más personas, mostrar
+                                aquello que tiene para ofrecer y llegar a más lugares. Con nuestras soluciones para
+                                Sitios Web podemos ofrecerte el sitio que se ajuste a tu medida, desde sitios
+                                básicos hasta soluciones que te permitan tener un mayor control y personalización.
+                                <a href="#pointbasicweb"><span class="read-more-link">¡Estás aquí!</span></a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed font-weight-semi-bold bg-accordion-primary"
+                                type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                aria-expanded="false" aria-controls="collapseTwo">
+                                <i class="fa fa-angle-right mr-2"></i> Software a la medida
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">¿Necesitas un software o programa que te ayude en tu
+                                negocio? Con nuestras soluciones de software a la medida ofrecemos entornos que
+                                permite apoyar tu empresa usando tecnologías que nos permiten ofrecer software
+                                multiplataforma y completamente ajustado a tus necesidades.
+                                <a href="https://noho.digital/contact"><span class="read-more-link">Saber
+                                        más...</span></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed font-weight-semi-bold bg-accordion-primary"
+                                type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                aria-expanded="false" aria-controls="collapseThree">
+                                <i class="fa fa-angle-right mr-2"></i> Aplicativos móviles
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Desde Nogo Digital creamos aplicaciones móviles que
+                                funcionan en la web, en la Play Store y en Apple Store, permitiendo tener
+                                aplicaciones multiplataforma ajustadas a tus necesidades.
+                                <a href="https://noho.digital/contact"><span class="read-more-link">Saber
+                                        más...</span></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- fin acordeano boostrap -->
+
+            </div>
+            <!-- Category End -->
+
+
+            <!-- Image Start -->
+            <div class="border p-3 mb-5">
+                <img src="assets/img/blog-1.jpg" alt="" class="img-fluid">
+            </div>
+            <!-- Image End -->
+
+
+
+
+
+            <!-- Plain Text Start -->
+            <div>
+                <h3 class="font-weight-bold mb-4">No todos iniciamos igual</h3>
+                <div class="border p-3">
+                    No todas las ideas inician con grandes capitales, para Noho Digital es importante acompañarte en
+                    el proceso de impulsar tu empresa en la web. </div>
+            </div>
+            <!-- Plain Text End -->
+        </div>
+        <!-- Sidebar End -->
+    </div>
+</div>
+<!-- Detail End -->
