--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <a routerLink="/" class="navbar-brand">
                 <!-- <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1> -->
-                <img style="width: 8rem" src="../../../assets/img/Logo.png" alt="" />
+                <img style="width: 8rem" src="assets/img/Logo.png" alt="" />
             </a>
             <!-- <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p> -->
             <div class="d-flex justify-content-start mt-4">
@@ -23,13 +23,13 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h5 class="font-weight-bold text-primary-highlight mb-4">Enlaces</h5>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-white mb-2" href="index.html"><i
+                <a class="text-white mb-2" routerLink="/"><i
                         class="fa fa-angle-right text-primary-highlight mr-2"></i>Inicio</a>
                 <a class="text-white mb-2" href="#pointtoabout"><i
                         class="fa fa-angle-right text-primary-highlight mr-2"></i>Sobre nosotros</a>
                 <a class="text-white mb-2" href="#pointtoservices"><i
                         class="fa fa-angle-right text-primary-highlight mr-2"></i>Servicios</a>
-                <a class="text-white mb-2" href="https://noho.digital/productos"><i
+                <a class="text-white mb-2" routerLink="/productos"><i
                         class="fa fa-angle-right text-primary-highlight mr-2"></i>Productos</a>
                 <a class="text-white mb-2 d-none" href="#pricing"><i
                         class="fa fa-angle-right text-primary-highlight mr-2"></i>Precios</a>
